--- a/index.html
+++ b/index.html
@@ -2,132 +2,193 @@
 <html lang="fa">
 <head>
 <meta charset="UTF-8" />
-<title>گردونه شانس همیشه منفی 100</title>
+<title>بازی تو و سه لیوان</title>
 <style>
   body {
     background: #222;
     color: white;
     font-family: Arial, sans-serif;
     text-align: center;
-    padding: 40px;
+    margin: 0;
+    padding: 20px;
     user-select: none;
   }
-  #wheel-container {
+  h1 {
+    margin-bottom: 10px;
+  }
+  #game {
     margin: 20px auto;
+    width: 360px;
     position: relative;
-    width: 320px;
-    height: 320px;
   }
-  svg {
-    width: 320px;
-    height: 320px;
-    transform: rotate(0deg);
-    transition: transform 4s cubic-bezier(0.33, 1, 0.68, 1);
+  .cup {
+    width: 100px;
+    height: 140px;
+    background: #555;
+    border-radius: 0 0 50px 50px;
+    display: inline-block;
+    margin: 0 15px;
+    position: relative;
+    cursor: pointer;
+    box-shadow: 0 5px 10px rgba(0,0,0,0.7);
+    transition: transform 0.5s ease;
   }
-  path {
-    stroke: #fff;
-    stroke-width: 2px;
+  .cup:hover {
+    transform: translateY(-15px);
   }
-  text {
-    font-weight: 900;
-    fill: white;
-    font-size: 28px;
-    pointer-events: none;
-    font-family: "Arial Black", Arial, sans-serif;
+  #ball {
+    width: 30px;
+    height: 30px;
+    background: #e74c3c;
+    border-radius: 50%;
+    position: absolute;
+    top: 110px;
+    left: 20px;
+    transition: left 0.6s ease;
+    box-shadow: 0 0 10px #e74c3c;
   }
-  #pointer {
-    width: 0; 
-    height: 0; 
-    border-left: 20px solid transparent;
-    border-right: 20px solid transparent;
-    border-bottom: 40px solid #e74c3c;
-    margin: 0 auto;
-    margin-top: -20px;
+  #message {
+    margin-top: 25px;
+    font-size: 22px;
+    min-height: 40px;
   }
-  #spinBtn {
-    margin-top: 30px;
-    padding: 14px 40px;
-    background-color: #0088cc;
+  #level {
+    margin-top: 15px;
+    font-size: 18px;
+  }
+  #startBtn {
+    margin-top: 25px;
+    padding: 12px 30px;
+    font-size: 20px;
+    background-color: #1abc9c;
     border: none;
     border-radius: 12px;
     color: white;
-    font-size: 22px;
-    font-weight: bold;
     cursor: pointer;
-    transition: background-color 0.3s;
+    transition: background-color 0.3s ease;
   }
-  #spinBtn:hover {
-    background-color: #005f7a;
+  #startBtn:hover:not(:disabled) {
+    background-color: #16a085;
   }
-  #result {
-    margin-top: 30px;
-    font-size: 42px;
-    font-weight: bold;
-    min-height: 60px;
-    color: #e74c3c;
-  }
-  #fixedValue {
-    margin-top: 10px;
-    font-size: 40px;
-    color: #e74c3c;
-    font-weight: 900;
+  #startBtn:disabled {
+    background-color: #555;
+    cursor: not-allowed;
   }
 </style>
 </head>
 <body>
 
-<h1>گردونه شانس</h1>
+<h1>بازی تو و سه لیوان</h1>
+<div id="level">مرحله: 1</div>
 
-<div id="wheel-container">
-  <svg id="wheel" viewBox="0 0 320 320" xmlns="http://www.w3.org/2000/svg" >
-    <g transform="translate(160,160)">
-      <!-- 4 slices, each 90deg -->
-      <path d="M0 0 L160 0 A160 160 0 0 1 0 160 Z" fill="#1abc9c" />
-      <path d="M0 0 L0 160 A160 160 0 0 1 -160 0 Z" fill="#3498db" />
-      <path d="M0 0 L-160 0 A160 160 0 0 1 0 -160 Z" fill="#9b59b6" />
-      <path d="M0 0 L0 -160 A160 160 0 0 1 160 0 Z" fill="#e74c3c" />
-      <!-- Texts -->
-      <text x="95" y="20" text-anchor="middle" dominant-baseline="middle" transform="rotate(45)">+۵۰۰</text>
-      <text x="-20" y="95" text-anchor="middle" dominant-baseline="middle" transform="rotate(135)">+۲۰۰</text>
-      <text x="-95" y="-20" text-anchor="middle" dominant-baseline="middle" transform="rotate(-135)">+۳۰۰</text>
-      <text x="20" y="-95" text-anchor="middle" dominant-baseline="middle" transform="rotate(-45)">-۱۰۰</text>
-    </g>
-  </svg>
+<div id="game">
+  <div class="cup" data-index="0"></div>
+  <div class="cup" data-index="1"></div>
+  <div class="cup" data-index="2"></div>
+  <div id="ball"></div>
 </div>
 
-<div id="pointer"></div>
-
-<button id="spinBtn">بچرخون</button>
-
-<div id="result">نتیجه: </div>
-<div id="fixedValue">-۱۰۰</div>
+<div id="message"></div>
+<button id="startBtn">شروع بازی</button>
 
 <script>
-  const wheel = document.getElementById('wheel');
-  const spinBtn = document.getElementById('spinBtn');
-  const result = document.getElementById('result');
+  const cups = document.querySelectorAll('.cup');
+  const ball = document.getElementById('ball');
+  const message = document.getElementById('message');
+  const levelDisplay = document.getElementById('level');
+  const startBtn = document.getElementById('startBtn');
 
-  // همیشه نتیجه -100 است که روی بخش چهارم است (اندیس 3)
-  const negativeIndex = 3;
-  const segmentCount = 4;
+  // موقعیت‌های لیوان‌ها (px نسبت به والد)
+  const cupPositions = [15, 130, 245];
+  let currentBallIndex = 0;
+  let level = 1;
+  let shuffleSpeed = 800; // سرعت شروع
+  let shuffleCount = 0;
+  let maxShuffles = 5;
 
-  spinBtn.addEventListener('click', () => {
-    spinBtn.disabled = true;
-    result.textContent = 'در حال چرخش...';
+  let isShuffling = false;
 
-    // چرخش های کامل + زاویه به سمت بخش 3
-    const spins = Math.floor(Math.random() * 3) + 4; // 4 تا 6 دور کامل
-    const segmentAngle = 360 / segmentCount;
-    const targetAngle = 360 * spins + segmentAngle * negativeIndex + segmentAngle / 2;
+  // قرار دادن توپ زیر اولین لیوان در شروع
+  function placeBall(index) {
+    ball.style.left = (cupPositions[index] + 35) + 'px';
+    currentBallIndex = index;
+  }
 
-    wheel.style.transition = 'transform 4s cubic-bezier(0.33, 1, 0.68, 1)';
-    wheel.style.transform = `rotate(${targetAngle}deg)`;
+  // شروع بازی
+  function startGame() {
+    level = 1;
+    shuffleSpeed = 800;
+    maxShuffles = 5;
+    levelDisplay.textContent = 'مرحله: ' + level;
+    message.textContent = '';
+    startBtn.disabled = true;
+    placeBall(0);
+    setTimeout(shuffleCups, 800);
+  }
 
-    setTimeout(() => {
-      result.textContent = 'نتیجه: -۱۰۰';
-      spinBtn.disabled = false;
-    }, 4200);
+  // جابجایی نرم توپ بین لیوان‌ها
+  function moveBallTo(index) {
+    ball.style.left = (cupPositions[index] + 35) + 'px';
+    currentBallIndex = index;
+  }
+
+  // Shuffle - جابجایی توپ بین لیوان‌ها چند بار و سریع‌تر مرحله به مرحله
+  function shuffleCups() {
+    isShuffling = true;
+    shuffleCount = 0;
+
+    function singleShuffle() {
+      if (shuffleCount >= maxShuffles) {
+        isShuffling = false;
+        message.textContent = 'حالا حدس بزن توپ کجاست!';
+        return;
+      }
+      // انتخاب جای جدید توپ، متفاوت از قبلی
+      let nextIndex;
+      do {
+        nextIndex = Math.floor(Math.random() * 3);
+      } while (nextIndex === currentBallIndex);
+
+      moveBallTo(nextIndex);
+      shuffleCount++;
+
+      setTimeout(singleShuffle, shuffleSpeed);
+    }
+
+    singleShuffle();
+  }
+
+  // کاربر کلیک روی لیوان
+  cups.forEach(cup => {
+    cup.addEventListener('click', () => {
+      if (isShuffling) return; // اگه داره جابجا میشه اجازه نده حدس بزنه
+      const guess = parseInt(cup.dataset.index);
+
+      if (guess === currentBallIndex) {
+        message.textContent = 'تبریک! درست حدس زدی!';
+        level++;
+        levelDisplay.textContent = 'مرحله: ' + level;
+        shuffleSpeed = Math.max(250, shuffleSpeed - 120); // افزایش سرعت
+        maxShuffles = Math.min(15, maxShuffles + 2); // افزایش دفعات جابجایی
+        startBtn.disabled = false;
+      } else {
+        message.textContent = 'اشتباه! توپ زیر لیوان شماره ' + (currentBallIndex + 1) + ' بود.';
+        startBtn.disabled = false;
+      }
+    });
   });
+
+  startBtn.addEventListener('click', () => {
+    message.textContent = '...جار می‌زنم';
+    startBtn.disabled = true;
+    shuffleSpeed = Math.max(250, shuffleSpeed); // reset speed if restarted
+    maxShuffles = 5;
+    shuffleCups();
+  });
+
+  // جایگذاری اولیه توپ
+  placeBall(0);
 </script>
+
 </body>
 </html>
